# KTX-Software-Unity

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: KtxUnityPlugin.cpp  ThreadSafeQueue.h  ktx_c_binding.c  ktx_c_binding.cpp  ktx_unity_export.def
